<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">Brack</string>
    <string name="title_activity_main">Brack</string>
    <string name="package_name">com.brack.app</string>
    <string name="custom_url_scheme">com.brack.app</string>
</resources>
